Add core components and lift state up

--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "payment": "^2.2.1",
+    "prop-types": "^15.5.10",
     "react": "^15.6.1",
+    "react-bootstrap": "^0.31.2",
     "react-dom": "^15.6.1",
+    "react-load-script": "0.0.6",
     "react-scripts": "1.0.11"
   },
   "scripts": {
