--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-plugin-transform-remove-console": "^6.8.5",
+    "babel-preset-env": "^1.6.0",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.2",
@@ -23,7 +25,11 @@
   },
   "babel": {
     "presets": [
-      "react-app"
+      "react-app",
+      "env"
+    ],
+    "plugins": [
+      "transform-remove-console"
     ]
   },
   "main": "lib/index.js"
